--- a/html/230206pizzamaru.html
+++ b/html/230206pizzamaru.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <title>pizzamaru</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/230206pizzamaru.css">
-    <link rel="stylesheet" media="all and (max-width:1024px)" href="/css/230206pizzamarutstyle.css">
-    <link rel="stylesheet" media="all and (max-width:800px)" href="/css/230206pizzamarumstyle.css">
+    <link rel="stylesheet" type="text/css" href="/ex/css/230206pizzamaru.css">
+    <link rel="stylesheet" media="all and (max-width:1024px)" href="/ex/css/230206pizzamarutstyle.css">
+    <link rel="stylesheet" media="all and (max-width:800px)" href="/ex/css/230206pizzamarumstyle.css">
 </head>
 
 <body>
@@ -98,13 +98,13 @@
         <div class="swiper mainpage">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="/imgs/pizzamaru/메인피자1.png" alt>
+                    <img src="/ex/imgs/pizzamaru/메인피자1.png" alt>
                 </div>
                 <div class="swiper-slide">
-                    <img src="/imgs/pizzamaru/메인피자2.png" alt>
+                    <img src="/ex/imgs/pizzamaru/메인피자2.png" alt>
                 </div>
                 <div class="swiper-slide">
-                    <img src="/imgs/pizzamaru/메인피자3.png" alt>
+                    <img src="/ex/imgs/pizzamaru/메인피자3.png" alt>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="order3">
-                <a href="#"><img src="/imgs/pizzamaru/가맹점모집.png" alt="가맹점모집"></a>
+                <a href="#"><img src="/ex/imgs/pizzamaru/가맹점모집.png" alt="가맹점모집"></a>
             </div>
         </div>
     </div>
@@ -318,7 +318,7 @@
     
     <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="/js/pizzamaru.js"></script>
+    <script src="/ex/js/pizzamaru.js"></script>
 </body>
 
 </html>
