--- a/html/230206pizzamaru.html
+++ b/html/230206pizzamaru.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <div class="top">
+            <i class="mobile fa-solid fa-bars"></i>
             <div>
                 <label>주소검색</label>
                 <input type="text" class="place" placeholder="현 주소 입력창(매장 찾기)">
@@ -90,6 +91,16 @@
                         </ul>
                     </div>
                 </li>
+                <div class="plus">
+                <div class="plus_1">
+                    <span>제휴광고</span>
+                    <span>1:1문의</span>
+                </div>
+                <div class="plus_2">
+                    <span>창업문의</span>
+                    <span>고객만족센터</span>
+                </div>
+                </div>
             </ul>
         </nav>
     </header>
